# transmogrifier

./: .gitignore  .gitmodules  .ocamlformat  README.md  _RocqProject  dune  dune-project  transmogrifier.opam
examples/: alternating.c  alternating.h  alternating.ml  div7.c  div7.h  div7.ml  dune  mod3.c  mod3.h  mod3.ml  secondlast.c  secondlast.h  secondlast.ml  suffix.c  suffix.h  suffix.ml  traffic.c  traffic.h  traffic.ml  vending.c  vending.h  vending.ml
examples/perftests/: alternating.c  div7.c  mod3.c  secondlast.c  suffix.c  traffic.c  vending.c
examples/session/: README.md  dune  learn_compile.ml  session_demo.sh  session_legacy.c  session_modern.c
include/: dfa.h.in  mealy.h.in  moore.h.in  nfa.h.in
lib/: Extraction.v  dune  emit_header.ml  pipeline.ml  printer.ml
theories/: Monads.v  dune
theories/compiler/: dfa.v  mealy.v  moore.v  nfa.v
theories/learner/: dfa.v  mealy.v  moore.v
theories/transparency/: dfa.v  dfaproofs.v  mealyproofs.v  mooreproofs.v  nfaproofs.v
